<resources>
    <string name="app_name">RPG01_for_Android</string>

    <string name="gameStart">はじめる</string>

    <string name="player">プレイヤー</string>
    <string name="enemy">エネミー</string>

    <string name="up">↑</string>
    <string name="down">↓</string>
    <string name="left">←</string>
    <string name="right">→</string>
    <string name="enter">○</string>

    <string name="player_for_short">主</string>
    <string name="attack">こうげき</string>
    <string name="magic">じゅもん</string>
    <string name="escape">にげる</string>
    <string name="item">どうぐ</string>
    <string name="hp_">HP:</string>
    <string name="mp_">MP:</string>
    <string name="level_">LV:</string>
    <string name="hp_val">999</string>
    <string name="mp_val">999</string>
    <string name="level_val">100</string>

    <string name="appear">%1$sがあらわれた！\n</string>
    <string name="win">%1$sは%2$sを倒した！\n</string>
    <string name="lose">%1$sはたおれた•••\n</string>
    <string name="succes_escape">%1$sは逃げたした！</string>
    <string name="failed_escape">まわりこまれてしまった！</string>
    <string name="attackMsg">%1$sの攻撃！\n%2$sに%3$dのダメージ！\n</string>
    <string name="skillAttackMsg">%1$sは%2$sを発動！\n%3$sに%4$dのダメージ！\n</string>
    <string name="skillRecoveryMsg">%1$sは%2$sを発動！\n%1$sは%3$dポイント回復！\n</string>
    <string name="skillSuppoerMsg">%1$sは%2$sを発動！\n全神経を集中させた！\n</string>
    <string name="skillSupportMsg_debuf">%1$sは%2$sを発動！\n%3$sの能力が下がった！\n</string>
    <string name="skill_unusable">MPが足りない！</string>
    <string name="recieveExp">%1$dポイントの経験値を獲得！\n</string>
    <string name="lvup">%1$sはレベルが%2$d上がった！\n</string>

    <string name="king100">負けてしまうとはなんと不甲斐ない•••。\n恥を知るのじゃ！\n</string>

</resources>
