<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/field"
    android:background="#ade"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:gravity="center">

        <ImageView
            android:id="@+id/player"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.25"
        android:background="#000"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.4"
            android:weightSum="0.9">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:weightSum="0.9"
                android:gravity="center">
                <Button
                    android:id="@+id/left"
                    android:text="@string/left"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:weightSum="0.9"
                android:gravity="center">
                <Button
                    android:id="@+id/up"
                    android:text="@string/up"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"/>

                <Button
                    android:id="@+id/enter"
                    android:text="@string/enter"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"/>

                <Button
                    android:id="@+id/down"
                    android:text="@string/down"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:orientation="vertical"
                android:weightSum="0.9"
                android:gravity="center">
                <Button
                    android:id="@+id/right"
                    android:text="@string/right"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ddd"
                android:layout_margin="5dp"/>
            <TextView
                android:id="@+id/msg_box"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#ddd"
                android:layout_margin="10dp"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>